syntax = "proto3";

package calculator;

service Calculator {
  rpc Func(CalcReq) returns (CalcResp);
}

message CalcReq {
  int64 a = 1;
  int64 b = 2;
  string c = 3;
}

message CalcResp{int64 result = 1;}

service Admin {
  rpc GetReqCount(GetCountReq) returns (CounterResp);
}
message GetCountReq {}
message CounterResp {
  uint64 count = 1;
}